# metamessage

./: .gitignore  HISTORY.md  Makefile  README.de.md  README.en.md  README.es.md  README.fr.md  README.id.md  README.ja.md  README.ko.md  README.md  README.ru.md  README.th.md  README.vi.md  go.mod  history.sh  meta-message.sln  metamessage.go  metamessage_test.go  y.output
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md‎
.trae/documents/: cross-language-jsonc-tests-phase2.md  cross-language-jsonc-tests-phase3.md  cross-language-jsonc-tests.md  csharp_implementation_plan.md  csharp_jsonc_implementation_plan.md  examples_plan.md  js_mm_implementation_plan.md  mm-java_implementation_plan.md  mm-kt_implementation_plan.md  python_mm_implementation_plan.md  readme_examples_plan.md  rust_mm_implementation_plan.md  swift_mm_implementation_plan.md  typescript_mm_implementation_plan.md
.trae/rules/: git-commit-message.md  project_rules.md
.trae/specs/: CHECKLIST.md  SPEC.md  TASKS.md
.trae/specs/ast-tag-validation/: checklist.md  spec.md  tasks.md
.trae/specs/js-mm-validator-alignment/: checklist.md  spec.md  tasks.md
.trae/specs/lang-readmes/: checklist.md  spec.md  tasks.md
.trae/specs/mm-kt-alignment/: checklist.md  spec.md  tasks.md
.trae/specs/multilang-tag-validation/: checklist.md  spec.md  tasks.md
.trae/specs/per-type-validation/: checklist.md  spec.md  tasks.md
cmd/mm/: mm.go
examples/: README.md
examples/basic/: main.go
examples/c/: basic_usage.c  jsonc_roundtrip.c  nested_structures.c  tag_attributes.c
examples/cpp/: basic_usage.cpp  high_level_api.cpp  jsonc_roundtrip.cpp  macro_demo.cpp  nested_structures.cpp
examples/csharp/: MetaMessageExamples.csproj  Program.cs
examples/decode_stream/: main.go
examples/encode_stream/: main.go
examples/int/: main.go
examples/one/: main.go
examples/python/: basic_encode_decode.py  dict_and_list.py  jsonc_roundtrip.py  mm_decorator.py  nested_structures.py  value_to_node_api.py
examples/two/: main.go
internal/ast/: ast.go  tag.go  validate.go
internal/core/: binder.go  constants.go  decode.go  decode_tag.go  encode.go  encode_array.go  encode_array_test.go  encode_bool_test.go  encode_bytes.go  encode_bytes_test.go  encode_float.go  encode_float_test.go  encode_int.go  encode_int_test.go  encode_object.go  encode_object_test.go  encode_string.go  encode_string_test.go  encode_tag.go  encode_write.go  jsonc_test.go  mm.go  value_to_node.go  value_to_node_test.go
internal/ir/: ast.go  constants.go  mime.go  mime_test.go  tag.go  tag_test.go  validate.go  value_type.go
internal/jsonc/: bind.go  jsonc.go  jsonc_test.go  struct_to_jsonc.go  struct_to_jsonc_test.go  to_string.go
internal/mm/: binder.go  constants.go  decode.go  decode_tag.go  encode.go  encode_array.go  encode_array_test.go  encode_bool_test.go  encode_bytes.go  encode_bytes_test.go  encode_float.go  encode_float_test.go  encode_int.go  encode_int_test.go  encode_map.go  encode_object.go  encode_object_test.go  encode_str.go  encode_str_test.go  encode_string.go  encode_string_test.go  encode_struct_test.go  encode_tag.go  encode_write.go  jsonc_test.go  mm.go  value_to_mm.go  value_to_mm_test.go  value_to_node.go  value_to_node_test.go  x64dbg_test.go
internal/utils/: bigint.go  bigint_test.go  float.go  utils.go  utils_test.go  uuid.go
mm-c/: CMakeLists.txt  README.md
mm-c/src/: mm.c  mm.h
mm-c/src/core/: mc_constants.h  mc_constants.h.pch  mc_decoder.c  mc_decoder.h  mc_encoder.c  mc_encoder.h
mm-c/src/ir/: mc_ast.c  mc_ast.h  mc_tag.c  mc_tag.h  mc_value_type.h
mm-c/src/jsonc/: mc_ast.c  mc_ast.h  mc_ir_parser.c  mc_ir_parser.h  mc_parser.c  mc_parser.h  mc_printer.c  mc_printer.h  mc_scanner.c  mc_scanner.h  mc_token.c  mc_token.h
mm-c/tests/: test_comprehensive.c  test_jsonc.c
mm-cpp/: CMakeLists.txt  README.md
mm-cpp/src/core/: codec.hpp  constants.hpp  decoder.hpp  encoder.hpp
mm-cpp/src/ir/: ast.hpp  tag.hpp  value_type.hpp
mm-cpp/src/jsonc/: ast.hpp  parser.cpp  parser.hpp  printer.hpp  scanner.cpp  scanner.hpp  token.hpp
mm-cpp/src/mm/: codec.cpp  codec.hpp  macro.hpp  mm.hpp
mm-cpp/tests/: test_comprehensive.cpp  test_jsonc.cpp  test_x64dbg.cpp
mm-cs/: README.md  meta-message.sln  meta-message1.sln  mm-csharp.csproj  mm-csharp.csproj.lscache
mm-java/: README.md  pom.xml
mm-js/: README.md  debug.js  debug_decode.mjs  debug_encoder.mjs  debug_int.mjs  jest.config.cjs  package-lock.json  package.json
mm-kt/: README.md  pom.xml
mm-php/: README.md  composer.json  phpunit.xml
mm-php/.phpunit.cache/: test-results
mm-py/: MANIFEST.in  README.md  metamessage_test.py  pyproject.toml  test_quoting.py
mm-py/metamessage/: __init__.py  jsonc.py  mm.py  tag.py
mm-py/metamessage/core/: __init__.py  decoder.py  encoder.py  mm.py  value_to_node.py
mm-py/metamessage/ir/: __init__.py  mime.py  tag.py  types.py  validator.py
mm-py/metamessage/jsonc/: __init__.py  jsonc.py
mm-py/tests/: test_decoder.py  test_encoder.py  test_jsonc.py  test_value_to_node.py
mm-rs/: Cargo.toml  README.md
mm-rs/src/: lib.rs
mm-rs/src/core/: constants.rs  decoder.rs  encoder.rs  mod.rs  prefix.rs  utils.rs  validator.rs
mm-rs/src/ir/: ast.rs  binder.rs  mod.rs  tag.rs  to_string.rs  value_type.rs
mm-rs/src/jsonc/: ast.rs  binder.rs  mod.rs  parser.rs  scanner.rs  tag.rs  to_string.rs  value_type.rs
mm-rs/src/mm/: constants.rs  decoder.rs  encoder.rs  mod.rs  prefix.rs  simple_value.rs  utils.rs  validator.rs
mm-swift/: Package.swift  README.md
mm-ts/: .eslintrc.json  README.md  debug-js.js  debug-simple.js  debug-ts.ts  debug-tsc.ts  debug.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.test.json
mm-ts/src/: metamessage.ts
mm-ts/test/: metamessage.test.ts
pkg/: mm.go  mm_test.go
src/: x64dbg.py
tests/: README.md  run_cross_lang.sh  runner.go
tests/harness/c/: CMakeLists.txt  harness.c
tests/harness/cpp/: CMakeLists.txt  harness.cpp
(+394 files in other folders)
