[package]
name = "metamessage"
version = "0.1.0"
edition = "2021"
authors = ["MetaMessage Team"]
description = "MetaMessage implementation in Rust"
license = "MIT"
repository = "https://github.com/metamessage/metamessage"

[dependencies]
thiserror = "1.0"
itoa = "1.0"
ryu = "1.0"
regex = "1.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
ipnetwork = "0.20"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]

[lib]
name = "metamessage"
path = "src/lib.rs"